Fixing bug 484744. Revert an IID change that broke the old Java plugin. r+sr=mrbkap@gmail.com